Add client part
Signed-off-by: Daviet, Nicolas <NicolasDaviet@eaton.com>

--- a/src/exo-nico-main.cfg.in
+++ b/src/exo-nico-main.cfg.in
@@ -7,3 +7,6 @@ server
     background = 0      #   Run as background process
     workdir = .         #   Working directory for daemon
     verbose = 0         #   Do verbose logging of activity?
+
+malamute
+    endpoint = "ipc://@/malamute" # Endpoint of the broker
